kubernetes/apps/azalea-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    app.kubernetes.io/name: azalea-dev
    app.kubernetes.io/part-of: azalea-homelab
