kubernetes/apps/azalea-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azalea-dev
  namespace: dev
  labels:
    app.kubernetes.io/name: azalea-dev
spec:
  type: ClusterIP
  ports:
    - name: ssh
      port: 2222
      targetPort: ssh
      protocol: TCP
    - name: web
      port: 80
      targetPort: web
      protocol: TCP
  selector:
    app.kubernetes.io/name: azalea-dev
