kubernetes/apps/azalea-dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azalea-dev
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: opencode.pirackr.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: azalea-dev
                port:
                  number: 80
